Point rotation added, no more rotating the canvas! This means that points are relative to the screen. Collision detection started.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link href="src/styles/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
+	<!--if you want to have this take up less space and have wifi connection always you can uncomment the cdnjs script link and comment out the p5minjs and p5collidejs libraries>
+	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>-->
+	<script src = "lib/p5.min.js"></script>
+	<script src = "lib/p5.collide2d.min.js"></script>
 	<script src ="src/js/gameObjects/laser.js"></script>
 	<script src="src/js/events/keyHandler.js"></script>
 	<script src = "src/js/gameObjects/ship.js"></script>
